[package]
name = "socket-metrics-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
prometheus = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["time", "macros", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
