[package]
name = "socket-metrics-exporter"
version = "0.1.0"
edition = "2021"
description = "Prometheus exporter for `ss -s` socket metrics"
license = "MIT"
authors = ["Luke Campbell <luke@axds.co>"]
homepage = "https://github.com/axiom-data-science/socket-metrics-exporter"
repository = "https://github.com/axiom-data-science/socket-metrics-exporter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Luke Campbell <luke@axds.co>"
copyright = "2026 Axiom Data Science, LLC"
license-file = ["LICENSE", "0"]
extended-description = """
Prometheus exporter that parses the output of `ss -s` and exposes socket \
statistics (total sockets, TCP state breakdown, and the transport table by \
address family) via an HTTP /metrics endpoint."""
# Statically linked against musl — no libc6 dependency.
depends = "iproute2"
section = "net"
priority = "optional"
assets = [
    ["target/release/socket-metrics-exporter", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/socket-metrics-exporter/README", "644"],
    ["debian/default", "etc/default/socket-metrics-exporter", "644"],
]
conf-files = ["/etc/default/socket-metrics-exporter"]
maintainer-scripts = "debian/"
systemd-units = { unit-scripts = "debian/", enable = true, start = true, restart-after-upgrade = true }

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
prometheus = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["time", "macros", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
